src/test/ui/issues/issue-45829/import-twice.rs
mod foo {
    pub struct A;
    pub struct B;
}

use foo::{A, A};
//~^ ERROR is defined multiple times

fn main() {}
